sfdx-source/force-app/main/default/objects/Brief_Item_Field_Tracking__c/Brief_Item_Field_Tracking__c.object-meta.xml
<CustomObject>
    <description>LEM-10108: For tracking changes to Brief Item fields</description>
    <label>Brief Item Field Tracking</label>
    <nameField>
        <displayFormat>BIFT-{0000}</displayFormat>
        <label>Brief Item Field Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brief Item Fields Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>