sfdx-source/force-app/main/default/objects/Brief_Item_Field_Tracking__c/fields/Brief_Item__c.field-meta.xml
<CustomField>
    <fullName>Brief_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-10108: For tracking changes to Brief Item Fields</description>
    <label>Brief Item</label>
    <referenceTo>Brief_Item__c</referenceTo>
    <relationshipLabel>Brief Item Fields Tracking</relationshipLabel>
    <relationshipName>Brief_Item_Fields_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>