sfdx-source/force-app/main/default/objects/Brief_Item_Field_Tracking__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-10108: For tracking changes to Brief Item Fields</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>