sfdx-source/force-app/main/default/objects/Brief_Item_Field_Tracking__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>LEM-10108: For tracking changes to Brief Item Fields</description>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>