sfdx-source/force-app/main/default/objects/Brief_Item_Field_Tracking__c/fields/Prior_Value_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Prior_Value_Rich_Text__c</fullName>
    <description>LEM-10108: For tracking changes to Brief Item Fields</description>
    <label>Prior Value</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>